# bioinf-ngs-course

./: .gitattributes  .gitignore  README.md
.mypy_cache/3.7/: _ast.meta.json  _importlib_modulespec.meta.json  abc.meta.json  ast.meta.json  builtins.meta.json  codecs.meta.json  copy.data.json  copy.meta.json  dataclasses.data.json  dataclasses.meta.json  io.meta.json  itertools.data.json  itertools.meta.json  mmap.meta.json  posix.meta.json  sys.meta.json  types.meta.json  typing.meta.json
hw1/: 1.ipynb
hw1/fastqc/: 100x.1_fastqc.html  test_fastqc.html
hw2/: hw2.ipynb  hw2.md
hw2/work/: frag.sorted.bai  frag_insert  grep  jump.sorted.bai  jump_insert
hw3/: hw3.ipynb
hw3/work/: ont.bam.bai  ont.indels  pacbio.bam.bai  pacbio.indels
hw4/: hw4.ipynb
hw4/work/: diff  ecoli.bam.bai  ecoli_spades.bam.bai  readlist.txt
hw5/: .gitattributes
hw5/data/: ECOLI_IS220_QUAKE_1K_paired_reads.dot  ECOLI_IS220_QUAKE_1K_paired_reads.fasta  ECOLI_IS220_QUAKE_1K_single_reads.fasta  s_6.first1000.dot  s_6.first1000.fastq  s_6.first1000.graph.fasta  s_6.first1000.no_bad_edges.dot  s_6.first1000.no_bad_edges.graph.fasta  s_6.first1000.no_dead_ends.dot  s_6.first1000.no_dead_ends.graph.fasta  s_6.first10000.dot  s_6.first10000.fastq  s_6.first10000.graph.fasta  s_6.first10000.no_bad_edges.dot  s_6.first10000.no_bad_edges.graph.fasta  test1.dot  (+17 more)
hw5/debrujin/: __main__.py  pyproject.toml  test2.ps
hw5/debrujin/debrujin/: __main__.py
hw5/debrujin/debrujin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hw5/debrujin/tests/: test_debrujin.py
hw6/: hw6.ipynb
(+178 files in other folders)
