[tool.poetry]
name = "debrujin"
version = "1.0.1"
description = ""
authors = ["Ilia Sheshukov <sheshukov.ilya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
networkx = "^2.3"
pysam = "^0.15.2"
numpy = "^1.16"
biopython = "^1.73"
fire = "^0.1.3"
pylint = "^2.3"
matplotlib = "^3.1"
graphviz = "^0.10.1"
pydot = "^1.4"
pygraphviz = "^1.5"
tqdm = "^4.32"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
